--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,9 +24,26 @@
   padding: 2rem;
 }
 
+.info {
+  display: table;
+  list-style: none;
+  margin-bottom: 1.5rem;
+  padding: 0;
+
+  li {
+    display: table-row;
+    margin-bottom: 0;
+
+    & > * {
+      display: table-cell;
+      padding-right: 1rem;
+    }
+  }
+}
+
 .pictures {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
 
   .item {
     &:not(:first-child) {
@@ -35,7 +52,8 @@
   }
 
   img {
-    width: 100%;
+    display: block;
+    // width: 100%;
   }
 
   label {
