--- a/src/assets/metrics.scss
+++ b/src/assets/metrics.scss
@@ -7,3 +7,22 @@ $font-size-h3: 2.8rem;
 $font-size-h4: 2.2rem;
 $font-size-h5: 1.8rem;
 $font-size-h6: 1.6rem;
+
+/*!
+ * Screen sizes
+ */
+
+// Any screen larger than this size is NO longer considered as a mobile device
+// For example:
+//   @media(min-width: $small-size) { ... tablet or desktop styles ... }
+$small-size: 40rem;
+
+// Any screen larger than this size is NO longer considered as a tablet device.
+// For example:
+//   @media(min-width: $medium-size) { ... desktop or jumbotron styles ... }
+$medium-size: 80rem;
+
+// Any screen larger than this size is NO longer considered as a desktop device.
+// For example:
+//   @media(min-width: $large-size) { ... jumbotron styles ... }
+$large-size: 120rem;
