--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         </li>
         <li>
           <label>LinkedIn:</label>
-          <span><a href="https://www.linkedin.com/in/gonzalo-chumillas-21326110b/">https://www.linkedin.com/in/gonzalo-chumillas-21326110b/</a></span>
+          <span><a href="https://www.linkedin.com/in/gonzalo-chumillas-21326110b/">https://linkedin.com/in/gonzalo-chumillas-21326110b/</a></span>
         </li>
         <li>
           <label>Email:</label>
@@ -34,15 +34,15 @@
       <h2>{{section.title}}</h2>
       <ul class="info">
         <li>
-          <span>Cliente:</span>
+          <label>Cliente:</label>
           <span><a href="http://www.axis-studios.com">Axis-Studios</a></span>
         </li>
         <li>
-          <span>Demo:</span>
+          <label>Demo:</label>
           <span><a href="#">http://cms.gchumilas.com</a></span>
         </li>
         <li>
-          <span>Tecnologías:</span>
+          <label>Tecnologías:</label>
           <span>PHP, MySQL, jQuery, XML, CSS3, HTML5</span>
         </li>
       </ul>
