--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,11 +21,28 @@
         </li>
         <li>
           <label>LinkedIn:</label>
-          <span><a href="https://www.linkedin.com/in/gonzalo-chumillas-21326110b/">https://linkedin.com/in/gonzalo-chumillas-21326110b/</a></span>
+          <span>
+            <a href="https://www.linkedin.com/in/gonzalo-chumillas-21326110b/">
+              https://linkedin.com/in/gonzalo-chumillas-21326110b/
+            </a>
+          </span>
+        </li>
+        <li>
+          <label>Skype:</label>
+          <span>
+            <a href="skype:gonzalo.chumillas">
+              685 510117 <i class="fa fa-phone"></i>
+            </a>
+          </span>
         </li>
         <li>
           <label>Email:</label>
-          <span><a href="mailto:gonzalo.chumillas@gmail.com">Gonzalo Chumillas</a></span>
+          <span>
+            <a href="mailto:gonzalo.chumillas@gmail.com">
+              gonzalo.chumillas@email.com
+              <i class="fa fa-envelope" aria-hidden="true"></i>
+            </a>
+          </span>
         </li>
       </ul>
     </div>
