--- a/src/app/snapshots.component.html
+++ b/src/app/snapshots.component.html
@@ -3,6 +3,6 @@
     <a [href]="getFullPath(snapshot.src)" target="_blank">
       <img [src]="getFullPath(snapshot.src)" [alt]="snapshot.title">
     </a>
-    <label>{{snapshot.title}}</label>
+    <label>{{snapshot.caption}}</label>
   </div>
 </div>
