--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="header">
     <h1>Gonzalo Chumillas</h1>
-    <div>Software Developer</div>
+    <div>
+      Software Developer
+      <a [href]="'mailto:' + email"><i class="fa fa-envelope"></i></a>
+    </div>
   </div>
 
   <div class="body">
