--- a/src/app/tags.component.html
+++ b/src/app/tags.component.html
@@ -3,11 +3,11 @@
     <label>{{tag.label}}:</label>
     <span *ngIf="tag.link">
       <a [href]="tag.link" [target]="tag.isExternalLink? '_blank': '_self'">{{tag.text}}</a>
-      <i *ngIf="tag.icon" class="fa" [ngClass]="tag.icon"></i>
+      <i *ngIf="tag.isIconVisible" class="fa" [ngClass]="tag.icon"></i>
     </span>
     <span *ngIf="!tag.link">
       {{tag.text}}
-      <i *ngIf="tag.icon" class="fa" [ngClass]="tag.icon"></i>
+      <i *ngIf="tag.isIconVisible" class="fa" [ngClass]="tag.icon"></i>
     </span>
   </li>
 </ul>
