--- a/src/app/snapshots.component.scss
+++ b/src/app/snapshots.component.scss
@@ -34,6 +34,7 @@
       border: 1px solid $divider-color;
       margin: 2rem 1rem;
       padding: 1rem 1rem 0;
+      // width: auto;
 
       &:not(:first-child) {
         display: block;
