--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
   <div class="body">
     <div class="section bio">
-      <p>{{bio.description}}</p>
+      <p [innerHTML]="bio.description"></p>
       <app-tags [tags]="bio.tags"></app-tags>
       <ul class="links">
         <li *ngFor="let tag of bio.tags">
