--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -58,6 +58,12 @@
 }
 
 @media(min-width: $small-size) {
+  .header {
+    h1 {
+      font-size: $font-size-h1;
+    }
+  }
+
   .bio {
     margin-bottom: 4rem;
 
