--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       <app-tags [tags]="bio.tags"></app-tags>
       <ul class="links">
         <li *ngFor="let tag of bio.tags">
-          <a [href]="tag.link" [target]="tag.isExternalLink? '_blank': '_self'">
+          <a [href]="sanitize(tag.link)" [target]="tag.isExternalLink? '_blank': '_self'">
             <i class="fa" [ngClass]="tag.icon"></i>
           </a>
         </li>
